# rdb

./: .Rbuildignore  .Rhistory  .gitignore  DESCRIPTION  NAMESPACE  README.md  config.yaml  data_config.yaml  icd10.yaml  icd10_example.yaml  main_r.cpp  opcs.yaml  opcs4.yaml  opcs4_fixed.yaml  opcs_fixed.yaml  test.yaml  tftest.py
.github/workflows/: R-CMD-CHECK.yaml  cmake.yml  test.yml
R/: RcppExports.R  acs_dataset.R  code_utils.R  rdb.R
man/: acs_dataset.Rd  code_groups.Rd  find_code_duplicates.Rd  load_acs_dataset.Rd  processed_acs_dataset.Rd
profiles/: README.md
scripts/: config.yaml  opcs4.R  profile.R
scripts/analysis/: dataset.R  descriptive.R  model.R  model_test.R  plots.R  risk_tradeoff.Rmd  run_descriptive.R  run_models.R  swd_dataset.R  test.R
scripts/python/: nn_all_codes.py  nn_test.py  nn_test_requirements.txt  skl_all_codes.py
scripts/utils/: icd10_api.R  opcs4.R
src/: CMakeLists.txt  CMakelists.txt  Makevars  Makevars.win  RcppExports.cpp  acs.h  acs.hpp  category.cpp  category.h  category.hpp  clinical_code.cpp  clinical_code.h  clinical_code.hpp  cmdline.hpp  code.cpp  colours.h  colours.hpp  con_handle.h  con_handle.hpp  config.cpp  config.h  config.hpp  debug.hpp  env_handle.h  env_handle.hpp  episode.h  episode.hpp  episode_row.h  episode_row.hpp  event_counter.h  event_counter.hpp  examples.hpp  main.cpp  main_python.cpp  main_r.cpp  mem_row_buffer.hpp  mortality.h  mortality.hpp  odbc.cpp  odbc_better.cpp  (+36 more)
src/cmdline/: cmdline.cpp  cmdline.tpp
src/gtest/: clinical_code.cpp  episode.cpp  parser.cpp  string_lookup.cpp  table.cpp  timestamp.cpp  top_level_category.cpp
src/old/: examples.hpp
src/programs/: main.cpp  spells.cpp  test.cpp
tools/: Makefile  gmon.out  profile.R  test.R  test.cpp
